<resources>
    <string name="app_name">The Movie DB</string>
    <string name="message_throw_exception_viewmodel_factory">unknown model class</string>
    <string name="title_movies">Movies</string>
    <string name="title_genres">Genres</string>
    <string name="title_favorite">Favorite</string>
    <string name="fake_text_movie_title">Avenger Endgame Infinity war</string>
    <string name="fake_text_imdb_score">8.7</string>
    <string name="default_text_category">Popular Movie</string>
    <string name="default_release_day">January 29,2013</string>
    <string name="fake_text_score_detail">7.2/10</string>
    <string name="favorite_button">Favorite</string>
    <string name="text_overview_detail">Overview</string>
    <string name="full_casts_and_craw">Full casts and craw</string>
    <string name="text_review_title">Reviewer</string>
    <string name="fake_text_actor_name">Chris Herme</string>
    <string name="fake_text_character">Thor</string>
    <string name="minumun_text_line">1</string>
    <string name="maxiumn_text_line">4</string>
    <string name="info_birth">Plate of Birth: Cam Pha Quang Ninh</string>
    <string name="info_male">Genre: Male</string>
    <string name="info_born">Born: 25 Sep 1968</string>
    <string name="title_born">Born:</string>
    <string name="genre_male">Gender: Male</string>
    <string name="genre_female">Gender: Female</string>
    <string name="title_known_for">Known For</string>
    <string name="title_vote">IMDB Score:</string>
    <string name="title_list_date">Released Date:</string>
    <string name="title_fav_movies">Favorite Movies</string>
    <string name="title_error">cannot load movie</string>
    <string name="retry">Retry</string>
    <string name="hint_search">Search for movies</string>
    <string name="title_popular_movie">Popular Movies</string>
    <string name="title_duration">132 minutes</string>
    <string name="genre_movie">Comedy-Family-Romantic</string>
</resources>
